fix: some layout issues
- ContactPresentation
- minimal select works visually better now
- better alignment of select menu
- shows info when attempt to select contacts while no favorized contacts

--- a/src/components/MessageSubject/MessageSubject.scss
+++ b/src/components/MessageSubject/MessageSubject.scss
@@ -7,8 +7,4 @@
   & > div {
     @extend %ellipsis;
   }
-
-  & .CTypePresentation {
-    @include inlinePresentation;
-  }
 }
